@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-02T02:06:25Z",
+  "timestamp" : "2022-08-02T08:24:31Z",
   "count_outdated" : 2304,
   "uniques_outdated" : 518,
-  "count" : 2338,
-  "uniques" : 538,
+  "count" : 2339,
+  "uniques" : 539,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-08-01T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
