@@ -1,5 +1,5 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 8,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-08-01T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-02T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
